fixed issue where grid items wouldn't conform to container width, fix issue where order box would be cut off by screen

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 .products_grid {
     display: grid;
 
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 15rem));
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     gap: 1rem;
 
     width: 100%;
