--- a/src/components/OrderConfirmed.module.css
+++ b/src/components/OrderConfirmed.module.css
@@ -50,11 +50,14 @@
 
 .confirmed_preview {
     padding: 0rem 1rem;
+    max-height: 30rem;
 
     box-sizing: border-box;
     border-radius: 0.3rem;
 
     background-color: hsl(13, 31%, 94%);
+
+    overflow-y: scroll;
 }
 
 
